# randshow

./: .clang-format  .gitignore  LICENSE  README.md  meson.build
app/: main.cpp
include/: randshow.hpp
include/randshow/: benford_distribution.hpp  distributions.hpp  engines.hpp  zipf_distribution.hpp
tests/: PractRand-randshow.cpp  gen_binary_data.cpp  randshow_test.cpp  randshow_test.sh
